Added some quality fixes from SonarCloud